# Digital-Trade-Hackathon-Lotus

./: .env.example  .gitignore  FINAL_SUBMIT_SHA256.json  README.md  constraints-py311.txt  pyproject.toml  release-assets.json
configs/: australia.yaml  indicators_p6_p7.yaml  rdtii_pillars_4_6_7_12.json  singapore.yaml
configs/rdtii/: p6_p7_rules_v1.json
data/external_status/: p4_treaties.json
data/source_overrides/: malaysia_p4.json
scripts/: bootstrap_release_assets.py  verify_release.py
src/rdtii_tool/: __init__.py  __main__.py  australia_corpus.py  cache.py  cli.py  config_loader.py  corpus_builder.py  demo.py  document_models.py  llm_client.py  malaysia_corpus.py  output_writer.py  schemas.py  zone1_cleanup.py  zone1_standardizer.py
src/rdtii_tool/demo_fixtures/: offline_demo.json
src/rdtii_tool/discovery/: __init__.py  base.py  known_url.py  orchestrator.py
src/rdtii_tool/downloaders/: __init__.py  base.py  sso_html.py
src/rdtii_tool/ingestion/: __init__.py  corpus_writer.py  lifecycle.py  manager.py  parser_router.py
src/rdtii_tool/mapping/: __init__.py  aggregator.py  candidate_router.py  citation_validator.py  discovery_tags.py  economy_profiles.py  final_audit.py  human_review.py  indicator_registry.py  indicator_specs.py  malaysia_p4_overrides.py  measure_extractor.py  model_config.py  model_policy.py  models.py  offline_export.py  p4_treaty_status.py  p6_i5_status.py  pdf_mapper.py  pipeline.py  run_singapore_p6_p7.py  submission_exporter.py  submission_rationale.py  validators.py  (+1 more)
tests/: test_release_package.py  test_release_readiness.py
(+27 files in other folders)
